route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: version-hello
    app.kubernetes.io/component: version-hello
    app.kubernetes.io/instance: version-hello
  name: version-hello
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: version-hello
    weight: 100
  wildcardPolicy: None
